# TimeManagementSystem

./: .gitignore  CMakeLists.txt  README.md  calendar.cpp  calendar.h  calendar_v_3.cpp  calendar_v_3.h  classes.h  event.cpp  event.h  functions.cpp  functions.h  interface.cpp  interface.h  main.cpp  modes.cpp  modes.h  plan.cpp  plan.h  pomodoro.cpp  pomodoro.h  reminder.cpp  reminder.h  task.cpp  task.h  testCalendar.cpp  testEvent.cpp  testGoogle.cpp  testInterface.cpp  testPomodoro.cpp  testReminder.cpp  testTask.cpp  testUser.cpp  user.h
pomodoro/: CMakeLists.txt  pomodoro.cpp  pomodoro.h  test.cpp
